Fixed issue with drag and selection not showing hovered element when another element is selected

--- a/src/components/layout/master.css
+++ b/src/components/layout/master.css
@@ -551,7 +551,8 @@ rect.selection {
 rect.overlay {
   cursor: default;
 }
-[data-selected] {
+[data-selected],
+[data-selecting] {
   stroke: #1a73e8;
 }
 #selection-path {
